Ok vercel config is done. Turns of GH integration is unavailable for classroom assignments

--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/water.css@2/out/dark.css">
 
 </head>
-<body>
+<body>f
     <h1>Voting System</h1>
 
     <form method="POST">
