--- a/templates/index.html
+++ b/templates/index.html
@@ -33,5 +33,7 @@
     {% endfor %}
     </ul>
 
+    <button onclick="window.location.href='{{ url_for('show_results') }}';">View Results</button>
+
 </body>
 </html>
